# Gazebo-Models

./: CMakeLists.txt  CommonJAUS.hpp  InsomniaPlugin.cpp  README.md  UdpSocket.cpp  UdpSocket.hpp  launch  launch_amelio.sh
Insomnia/: InsomniaPlugin.cpp  launch  model.config  robot.sdf
Insomnia/MarsTerrain/: MarsTerrain.sdf
Insomnia/Ramp/: Ramp.sdf
Insomnia/Worlds/: MarsTerrain.world  simple_hill.world
Insomnia/meshes/: BogieLeft.STL  BogieRight.STL  Forearm.STL  Wheel0.STL  Wheel1.STL  Wheel2_col.STL  Wheel5.STL  Wheel5_col.STL
Insomnia/robot-Ascent/: model.config
Insomnia/robot-Ascent/meshes/: linActBase.stl  wheel.stl
Insomnia/robot-Ascent/robots/: Ascent.sdf
Insomnia/robot-Insomnia/: model.config  robot-Insomnia.sdf
Insomnia/robot-Insomnia/meshes/: ArmBase_col.STL  Claw.STL  Wheel0_col.STL  Wheel3_col.STL
Insomnia2016_Full_Exported/: Insomnia2016_Full.world  launch
Insomnia2016_Full_Exported/Insomnia2016_Full/: model.config
Insomnia2016_Full_Exported/Insomnia2016_Full/meshes/: ArmBase.STL  DiffRight.STL  Forearm_col.STL  Humerus.STL  Humerus_col.STL  Jaw.STL  Jaw_col.STL  RockerLeft.STL  RockerRight.STL  Wheel1_col.STL  Wheel2.STL  Wheel3.STL  Wheel4_col.STL  Wrist_col.STL
Insomnia2016_Full_Exported/Insomnia2016_Full/robots/: Insomnia2016_Full.sdf
Sensors/LRF/: Coordinate.cpp  Coordinate.h  LaserRangeFinder.cpp  LaserRangeFinder.h  Line.cpp  Line.h  Region.cpp  Region.h
models/MarsTerrain/: MarsTerrain.sdf  model.config
models/Ramp/: model.config
models/ai_test/: model.config  model.sdf
models/box/: model.sdf
models/ehall_window/: model.config  model.sdf
models/floor/: model.sdf
models/robot-Amelio/: Amelio.sdf  model.config
models/robot-Amelio/meshes/: bogie_con_left.stl  diff_bar.stl  diff_con_left.stl  diff_con_right.stl  wheel0.stl  (+9 more)
models/robot-Ascent/: .Ascent.sdf.swp  Ascent.sdf  model.config
models/robot-Ascent_armless/: .Ascent_armless.sdf.swp  Ascent_armless.sdf  model.config
models/robot-Insomnia/: robot-Insomnia.sdf
models/tennis_ball/: model.config  model.sdf
models/wall/: model.sdf
plugins/: AscentPlugin.cpp  InsomniaPlugin.cpp  TennisBallPlugin.cpp
worlds/: ai_testing.world  big_hill.world  everything.world  example_amelio.world  gps_testing.world  simple_hill.world  video_scene.world
(+12 files in other folders)
